<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="34dp"
        android:contentDescription="@string/lblName"
        android:text="@string/label"
        app:layout_constraintEnd_toStartOf="@+id/editTextValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:autofillHints="@string/defaultValue"
        android:contentDescription="@string/edtTxt"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/defaultValue"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/lblName"
        android:text="@string/hasil"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtResult"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:contentDescription="@string/btnConvert"
        android:text="@string/btnConvert"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/rbDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/radioButton"
        android:text="@string/dollar"
        app:layout_constraintBaseline_toBaselineOf="@+id/rbRupiah"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <RadioButton
        android:id="@+id/rbRupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="131dp"
        android:contentDescription="@string/radioButton"
        android:text="@string/rupiah"
        app:layout_constraintStart_toStartOf="@+id/txtResult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="66dp"
        android:contentDescription="@string/lblName"
        android:text="@string/hasil2"
        app:layout_constraintBottom_toBottomOf="@+id/rbDollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/txtLabel" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/btnClear"
        android:text="@string/clear"
        app:layout_constraintStart_toEndOf="@+id/btnConvert"
        app:layout_constraintTop_toBottomOf="@+id/rbRupiah" />

</androidx.constraintlayout.widget.ConstraintLayout>